# 2048

./: Makefile  README.md  pyproject.toml
demo/: __main__.py  ai.py  board.py  tui.py
docs/: demo.cast
tests/: test_board.py
