[project]
name = "demo"
version = "0.1.0"
description = "Lowcost 2048"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.15.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "textual>=8.2.8",
]



[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "demo"
